--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "f3fde87907e878a3",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "README.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +84,9 @@
   },
   "active": "f3fde87907e878a3",
   "lastOpenFiles": [
-    "README.md"
+    "ideas/2022-06-02 10-39-54 Other idea.md",
+    "ideas/2022-06-02 10-35-48 Test idea.md",
+    "README.md",
+    "Untitled.md"
   ]
 }
